[package]
name = "timetracer"
version = "0.1.0"
edition = "2021"

[dependencies]
argparse = "0.2.2"
env_logger = "0.9.3"
glob = "0.3.0"
json = "0.12.4"
log = "0.4.17"
diesel = { version = "2.0.2", features=["sqlite"] }
diesel_migrations = "2.0.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0"